Bug 1400420 - fix tabbing backwards in prefs to not hide items behind the search/policies sticky header, r=preferences-reviewers,mstriemer
Differential Revision: https://phabricator.services.mozilla.com/D133071

--- a/browser/themes/shared/preferences/preferences.inc.css
+++ b/browser/themes/shared/preferences/preferences.inc.css
@@ -912,6 +912,11 @@ image.update-throbber {
   margin-inline-end: 8px;
 }
 
+.main-content {
+  /* the 32px min-height, plus 20+30px margin below, plus some leeway: */
+  scroll-padding-top: 90px;
+}
+
 #policies-container,
 #searchInput {
   min-height: 32px;
